# tsvbrdf

./: CMakeLists.txt  README.md
cmake/: FindStyLit.cmake
data/matlab/: load_config_file.m  load_sample_timefile.m  main-frames-sd-g.m  main-frames-sd.m  main-frames-staf.m  main-gu-staf-error.m  main-polycheck-sd.m  main-polycheck-staf.m  main-polyfit-sd-g.m  main-polyfit-sd.m  main-polyfit-staf-fig.m  main-polyfit-staf.m  main-polyfit.m  main-rmse-table.m  main-staf2poly.m
data/original/SnowyGround/poly-3/: Diffuse-0.exr  Diffuse-1.exr  Diffuse-2.exr  Diffuse-3.exr  Height-0.exr  Height-1.exr  Height-2.exr  Height-3.exr  Normal-0.exr  Normal-1.exr  Normal-2.exr  Normal-3.exr  Roughness-0.exr  Roughness-1.exr  Roughness-2.exr  Roughness-3.exr  Specular-0.exr  Specular-1.exr
doc/: reference.bib  report-15-2-2018.tex
doc/report-2-18/: report.tex
lib/stylit/: stylit.h  stylit.lib
src/: CMakeLists.txt  Globals.h  Polynom.h  TSVBRDF.cpp  main.cpp
src/ebsynth/: CMakeLists.txt
src/ebsynth/include/: ebsynth.h
src/ebsynth/src/: CMakeLists.txt  ebsynth.cu
src/tsvbrdf/: CMakeLists.txt  Globals.h  Polynom.cpp  Polynom.h  TSVBRDF.cpp  TSVBRDF.h  main.cpp
